--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
-* {
-    border: 1px red solid;
-}
+
 
 body {
     display: flex;
@@ -52,4 +50,48 @@ body {
 /* RHS sign up form */
 .sign-up {
     flex: 2;
+    padding-left: 3vw;
+    padding-right: 3vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+p {
+    font-family: sans-serif, cursive;
+    font-size: 2rem;;
+    font-weight: bold;
+}
+
+/* form styling */
+button, label, input {
+    display: block;
+    font-family: inherit;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    width: 20vw;
+    padding: 5px;
+    height: 30px;
+}
+
+.sign-up-form {
+    display: flex;
+    flex-flow: row wrap;
+    padding: 15px;
+}
+
+.sign-up-form input[type="text"],
+.sign-up-form input[type="email"],
+.sign-up-form input[type="number"],
+.sign-up-form input[type="password"] {
+    background-color: #fff;
+    border: 1px solid #d8d8d8;
+    padding: 24px 10px 12px;
+    font-size: 100%;
+}
+
+.sign-up-form.sign-up-button {
+    display: block;
 }
