--- a/index.css
+++ b/index.css
@@ -15,7 +15,8 @@ body {
     height: 100vh;
     background-image: url(images/background.jpg);
     background-repeat: no-repeat;
-    background-size: 50vw auto;
+    background-position: center;
+    width: 40vw;
 
     display: flex;
     flex-direction: column;
@@ -23,25 +24,22 @@ body {
 
 .banner {
     background:rgba(255,255,255,0.2);
-    margin-top: 25vh;
     flex: 1;
-    max-height: 10vh;
-    max-width: calc(100/3)vw;
+    height: auto;
+    position: relative;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-flow: row wrap;
 }
 
 .banner-logo-cat {
-    flex: auto;
     mix-blend-mode: multiply;
     height: 30vh;
-    width: auto;
 }
 
 .banner-slogan {
-    flex: auto;
     font-family: custom-font;
     font-size: 5rem;
 }
